tests/NormalTests/paczka1/fuzzy1/34568564.err
Error in line 1: Jvx6oS1JVEJ A787 5,0
Error in line 2: KL4ytsIb S121 715,9
Error in line 8: KL4ytsIb A787 96,8
Error in line 15: A678 A678 8,51
Error in line 17: tKfX1i94 A787 27,9
Error in line 24: A678 A678 32,3
Error in line 19: Jvx6oS1JVEJ S121 26,6
